--- a/styles.css
+++ b/styles.css
@@ -118,18 +118,31 @@ a:visited{
     margin-bottom: 15px;
 }
 
+.list_pad {
+    padding-left: 30px;
+}
+
 .list {
     padding: 0 20px;
     /* list-style: none; */
-}
-
-.list li {
     color: #86898f;
     margin-bottom: 8px;
+    text-align: justify;
+}
+
+.work_experience {
+    text-align: justify;
+}
+
+.skils li {
+    color: #86898f;
+    margin-bottom: 5px;
+    list-style-type: disc;
 }
 
 .table {
     width: 100%;
+    padding: 0 20px;
 }
 
 .table td{
@@ -142,6 +155,7 @@ a:visited{
 
 .table2 {
     width: 100%;
+    padding: 0 20px;
 }
 
 .table2 td{
@@ -158,12 +172,14 @@ a:visited{
 .link-list {
     list-style: none;
     padding: 0;
+    /* list-style-type: disc; */
 }
 
 .link-list li{
     margin-bottom: 10px;
     padding-bottom: 5px;
-    /* border-bottom: 1px solid #ccc; */
+    list-style-type: disc;
+    border-bottom: 1px solid #ccc;
 }
 
 .contact h2{
